added animation on page load

--- a/public/index.html
+++ b/public/index.html
@@ -14,12 +14,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <!-- change favicon -->
+    <link rel="icon" href="%PUBLIC_URL%/myfavicon.ico" />
+    <!-- change favicon -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Moviee Library is a downloadable collection of movies from your favorite movie sites"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -36,7 +38,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Moviee Library</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
