--- a/public/index.html
+++ b/public/index.html
@@ -53,5 +53,21 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <!-- Default Statcounter code for Moviee Library
+    https://moviee-library.netlify.app/ -->
+    <script type="text/javascript">
+      var sc_project=12711631; 
+      var sc_invisible=0; 
+      var sc_security="57765c8b"; 
+      var scJsHost = "https://";
+      document.write("<sc"+"ript type='text/javascript' src='" + scJsHost+
+      "statcounter.com/counter/counter.js'></"+"script>");
+      </script>
+      <noscript><div class="statcounter"><a title="Web Analytics Made Easy -
+      Statcounter" href="https://statcounter.com/" target="_blank"><img
+      class="statcounter" src="https://c.statcounter.com/12711631/0/57765c8b/0/"
+      alt="Web Analytics Made Easy - Statcounter"
+      referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
+      <!-- End of Statcounter Code --> 
   </body>
 </html>
